--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 DB_HOST = "localhost";
 DB_PORT = "";
-DB_USER = "api";
-DB_PASS = "api";
+DB_USER = "root";
+DB_PASS = "sisir143";
 DB_NAME = "pay2all";
 API_TOKEN = "4fa205316b0b678f53de30a463789e0f33cca097";
-HOST_URL = "85.255.8.99/test/";
+HOST_URL = "http://localhost/Pay2All";
